--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,12 +1,8 @@
-<div id="<%= dom_id article %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= article.title %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Content:</strong>
-    <%= article.content %>
-  </p>
-
-</div>
+<%= turbo_frame_tag article do %>
+  <div class="text-slate-200 border-solid border-b py-5">
+    <p><%= link_to article.title, article_path(article), data: { turbo_frame: "_top" } %></p>
+    <p class="my-5">
+      <%= article.content %>
+    </p>
+  </div>
+<% end %>
