--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,16 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
+  <style>
+    body {
+      background-color: #000000;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect fill='none' stroke-width='114.2' stroke-opacity='0.05' id='a' x='-400' y='-300' width='800' height='600'/%3E%3C/defs%3E%3Cg style='transform-origin:center'%3E%3Cg transform='rotate(9 0 0)' style='transform-origin:center'%3E%3Cg transform='rotate(-49.6 0 0)' style='transform-origin:center'%3E%3Cg transform='translate(1000 750)'%3E%3Cuse stroke='%23000' href='%23a' transform='rotate(3.1 0 0) scale(1.031)'/%3E%3Cuse stroke='%23000011' href='%23a' transform='rotate(6.2 0 0) scale(1.062)'/%3E%3Cuse stroke='%23000022' href='%23a' transform='rotate(9.3 0 0) scale(1.093)'/%3E%3Cuse stroke='%23000033' href='%23a' transform='rotate(12.4 0 0) scale(1.124)'/%3E%3Cuse stroke='%23000044' href='%23a' transform='rotate(15.5 0 0) scale(1.155)'/%3E%3Cuse stroke='%23000055' href='%23a' transform='rotate(18.6 0 0) scale(1.186)'/%3E%3Cuse stroke='%23000066' href='%23a' transform='rotate(21.7 0 0) scale(1.217)'/%3E%3Cuse stroke='%23000077' href='%23a' transform='rotate(24.8 0 0) scale(1.248)'/%3E%3Cuse stroke='%23000088' href='%23a' transform='rotate(27.9 0 0) scale(1.279)'/%3E%3Cuse stroke='%23000099' href='%23a' transform='rotate(31 0 0) scale(1.31)'/%3E%3Cuse stroke='%230000aa' href='%23a' transform='rotate(34.1 0 0) scale(1.341)'/%3E%3Cuse stroke='%230000bb' href='%23a' transform='rotate(37.2 0 0) scale(1.372)'/%3E%3Cuse stroke='%230000cc' href='%23a' transform='rotate(40.3 0 0) scale(1.403)'/%3E%3Cuse stroke='%230000dd' href='%23a' transform='rotate(43.4 0 0) scale(1.434)'/%3E%3Cuse stroke='%230000ee' href='%23a' transform='rotate(46.5 0 0) scale(1.465)'/%3E%3Cuse stroke='%2300F' href='%23a' transform='rotate(49.6 0 0) scale(1.496)'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  </style>
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto mt-28 px-5 flex text-slate-200">
       <%= yield %>
     </main>
   </body>
