Improving CRUD operations with Turbo

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,6 +18,7 @@
     <%= form.text_field :content, class: "text-black block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
   <div class="inline">
+    <%= link_to "Cancel", articles_path, class: "text-black ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
