--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,6 @@
-  <%= turbo_frame_tag "main-frame" do %>
-  <div class="mx-auto md:w-2/3 w-full mt-5">
-    <h1 class="font-bold text-4xl">Create a new Article</h1>
+<div class="mx-auto md:w-2/3 w-full mt-5">
+  <h1 class="font-bold text-4xl">Create a new Article</h1>
+  <%= turbo_frame_tag @article do %>
     <%= render "form", article: @article %>
-    <%= link_to "Back to articles", articles_path, class: "text-black ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   <% end %>
 </div>
