--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,23 +2,33 @@
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
-  <div class="flex items-center">
-    <h1 class="font-bold text-4xl mb-4">Access our articles</h1>
-    <h3 class="font-italic">Get to know us better!</h3>
+  <div class="m-5 text-center">
+    <h1 class="font-bold text-4xl">Access our articles</h1>
+    <h3 class="italic">Get to know us better!</h3>
   </div>
-  <%= link_to "New article", 
+  <div class="flex">
+    <div class="flex-grow flex flex-column justify-between mb-5 w-100">
+      <%= form_with(url: articles_path,
+              method: :get, 
+              class: "w-full", data: {
+                controller: "search-form", 
+                turbo_frame: "main-frame", 
+                turbo_action: "advance"}
+              ) do |form| %>
+        <%= form.label :query, "Search for articles", class: "block mb-2" %>
+        <div class="flex space-x-3">
+          <%= form.text_field :query, class: "py-3 px-3 rounded-lg text-black w-3/4", data: {action: "input->search-form#search"} %>
+          <%= form.submit "Search", class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium"  %>
+        </div>
+      <% end %>
+    </div>
+    <div class="flex-none">
+      <h3 class="italic text-center mb-2">Want to contribute?</h3>
+      <%= link_to "Write an Article!", 
               new_article_path, 
               data: { turbo_frame: dom_id(Article.new) }, 
               class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-  <div id="flex" class="mb-5 w-100">
-    <%= form_with(url: articles_path, method: :get, data: {
-      controller: "search-form", turbo_frame: "main-frame", turbo_action: "advance"}) do |form| %>
-      <%= form.label :query, "Search for articles", class: "block mb-2" %>
-      <div class="flex space-x-3">
-        <%= form.text_field :query, class: "py-3 px-3 rounded-border text-black", data: {action: "input->search-form#search"} %>
-        <%= form.submit "Search", class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium"  %>
-      </div>
-    <% end %>
+    </div>
   </div>
   <%= turbo_frame_tag Article.new %>
   <%= turbo_frame_tag "main-frame" do %>
