--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,22 +4,27 @@
   <% end %>
   <div class="flex" data-controller="charts">
     <h2>Discover our stats!</h2>
-    <button id="map-chart" 
+    <button id="map" 
             data-action="click->charts#toggleCharts"
       class="ml-5 bg-blue-600 text-white rounded-lg py-3 px-5 font-medium">
       Map Chart
     </button>
-    <button id="multiline-chart", 
+    <button id="multiline", 
             data-action="click->charts#toggleCharts"
       class="ml-5 bg-blue-600 text-white rounded-lg py-3 px-5 font-medium">
       Trending This Month
     </button>
+    <button id="top-users", 
+            data-action="click->charts#toggleCharts"
+      class="ml-5 bg-blue-600 text-white rounded-lg py-3 px-5 font-medium">
+      Top Researchers
+    </button>
   </div>
   <div data-controller="charts">
-    <div id="map-chart-content">
+    <div id="map-chart">
       <%= geo_chart Log.group(:country).count %>
     </div>
-    <div id="multiline-chart-content" style="display: none;">
+    <div id="multiline-chart" style="display: none;">
       <%= line_chart @logs.map { |log| {
           name: log.input,
           data: Log.where(input: log.input)
@@ -28,6 +33,17 @@
                   .count
         }}
     %>
+    </div>
+    <div id="top-users-chart" style="display: none;">
+      <%= column_chart Log.group(:ip)
+                      .order('count_id DESC')
+                      .limit(5)
+                      .count(:id), 
+                  library: {
+                    title: { text: 'Top 5 Users by Logs' },
+                    yAxis: { title: { text: 'Number of Logs' } },
+                    xAxis: { title: { text: 'User IP' } }
+                  } %>
     </div>
   </div>
   <div class="m-5 text-center">
