--- a/app/views/articles/_charts.html.erb
+++ b/app/views/articles/_charts.html.erb
@@ -2,31 +2,35 @@
   <h2>Discover our stats!</h2>
   <button id="map" 
             data-action="click->charts#toggleCharts"
+    data-turbo-frame="charts-frame"
     class="ml-5 bg-blue-600 text-white rounded-lg py-3 px-5 font-medium">
     Map Chart
   </button>
-  <button id="multiline", 
+  <button id="multiline"
             data-action="click->charts#toggleCharts"
+    data-turbo-frame="charts-frame"
     class="ml-5 bg-blue-600 text-white rounded-lg py-3 px-5 font-medium">
     Trending This Month
   </button>
-  <button id="top-users", 
+  <button id="top-users" 
             data-action="click->charts#toggleCharts"
+    data-turbo-frame="charts-frame"
     class="ml-5 bg-blue-600 text-white rounded-lg py-3 px-5 font-medium">
     Top Researchers
   </button>
-  <button id="latest", 
-            data-action="click->charts#toggleCharts"
+  <button id="latest"
+          data-action="click->charts#toggleCharts"
+    data-turbo-frame="charts-frame"
     class="ml-5 bg-blue-600 text-white rounded-lg py-3 px-5 font-medium">
     Latests Searches
   </button>
 </div>
 <div data-controller="charts">
-  <div id="map-chart">
-    <%= geo_chart Log.group(:country).count %>
+  <div id="map-chart" class="<%= active_chart == 'map' ? "block" : "hidden" %>">
+    <%= geo_chart logs_by_country %>
   </div>
-  <div id="multiline-chart" style="display: none;">
-    <%= line_chart @top_logs.map { |log| {
+  <div id="multiline-chart" class="<%= active_chart == 'multiline' ? "block" : "hidden" %>">
+    <%= line_chart top_logs.map { |log| {
           name: log.input,
           data: Log.where(input: log.input)
                   .where(created_at: 1.month.ago.midnight..Time.now)
@@ -35,17 +39,14 @@
         }}
     %>
   </div>
-  <div id="top-users-chart" style="display: none;">
-    <%= column_chart Log.group(:ip)
-                      .order('count_id DESC')
-                      .limit(5)
-                      .count(:id),
+  <div id="top-users-chart" class="<%= active_chart == 'top-users' ? "block" : "hidden" %>">
+    <%= column_chart top_users,
                     ytitle: 'Number of Searches',
                     xtitle: 'User IP'
                   %>
   </div>
-  <div id="latest-chart" style="display: none;">
-    <% @latest_logs.each do |log| %>
+  <div id="latest-chart" class="<%= active_chart == 'latest' ? "block" : "hidden" %>">
+    <% latest_logs.each do |log| %>
       <div class="flex justify-between">
         <h3><%= log.input %></h3>
         <p>By: <%= log.ip %></p>
