--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     }
   </style>
   <body>
-    <main class="container mx-auto mt-28 px-5 flex text-slate-200">
+    <main class="container mx-auto px-5 flex text-slate-200">
       <%= yield %>
     </main>
   </body>
